manifests/multi-mcs/zoneprinter/zoneprinter.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: zoneprinter
  labels:
    app: zoneprinter
spec:
  selector:
    matchLabels:
      app: zoneprinter
  template:
    metadata:
      labels:
        app: zoneprinter
    spec:
      containers:
        - name: frontend
          image: gcr.io/google-samples/zone-printer:0.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: zoneprinter
  labels:
    app: zoneprinter
spec:
  type: NodePort
  selector:
    app: zoneprinter
  ports:
    - name: http
      port: 80
